--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" hrf="style.css">
 </head>
 <body>
-    
+   <header class="cabecalho">
+    <h1 class="cabecalho-titulo"> turma 2b monteiro lobato</h1>
+    <ul class="cabecalho-lista">
+        <li class="cabecalho-lista-item">escola</li>
+        <li class="cabecalho-lista-item">estudante</li>
+    </ul>
+   </header>
+
 </body>
-</html>  
+</html *{margin:0;
+padding:0;}>  
