--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
         <li class="cabecalho-lista-item">escola</li>
         <li class="cabecalho-lista-item">estudante</li>
     </ul>
-   </header>
+
+    </header>
+
+    <section>
+        
+    </section>
+
 
 </body>
 </html 
