--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
 
     <section class="escola">
         <h2 class="titulo-escola">Sobre a escola</h2>
-        <p class="texto-escola">< A escola Monteiro Lobato conta com varios alunos
-            e varias turmas, incluindo a nossa 2b.
-              A escola esta localizada na Rua Bahia 1258, na cidade de Colorado Paraná.
-    /p>
+        <p class="texto-escola"> A escola Monteiro Lobato esrá localizada na Rua Bahia 1258, na cidade de Colorado Paraná</p>
+    
 
-    </section>
+</section>
+
 
 
 </body>
