--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
     <section class="escola">
         <h2 class="titulo-escola">Sobre a escola</h2>
-        <p class="texto-escola"> A escola Monteiro Lobato esrá localizada na Rua Bahia 1258, na cidade de Colorado Paraná</p>
+        <p class="texto-escola"> A escola Monteiro Lobato conta com vários alunos e várias turmas, incluindo a nossa 2b.
+            A escola está localizada na Rua Bahia 1258, na 
+            cidade de Colorado Paraná.</p>
     
 
 </section>
